force-app/main/default/objects/Inbound_Shipment__c/Inbound_Shipment__c.object-meta.xml
<CustomObject>
    <label>Inbound Shipment</label>
    <nameField>
        <displayFormat>INB-{00000}</displayFormat>
        <label>Inbound Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>