force-app/main/default/objects/Inbound_Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Expected</fullName>
                    <default>true</default>
                    <label>Expected</label>
                </value>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Putaway</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>