force-app/main/default/objects/Inbound_Shipment__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Shipments</relationshipLabel>
    <relationshipName>Inbound_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>