force-app/main/default/objects/Inbound_Shipment__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inbound Shipments</relationshipLabel>
    <relationshipName>Inbound_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>